--- a/Ongoing report/OngoingReport 1.1.tex
+++ b/Ongoing report/OngoingReport 1.1.tex
@@ -361,7 +361,7 @@ The problem of crew scheduling is discussed in detail in \cite{leggate2010crew}.
 
 \bigskip
 
-Another logistical decision topic related to the offshore windfarm sites is deciding their layout. This is discussed in various papers, such as \cite{mosetti1994optimization,kusiak2010design,saavedra2011seeding,perez2013offshore,hou2017combined}. There has been a significant amount of research in this direction, though most of this research focuses on windfarm on land, instead of offshore. The latter two papers \cite{perez2013offshore,hou2017combined} consider offshore windfarms, as this topic has gained more interest in recent years. While there is a large body of research, there are still many unanswered questions when one wants to determine how to get the most energy production from a site. One important question is the wake model to use, where wake is the decrease in energy output of a turbine based on the position of surrounding turbines. This is clearly a core part of determining where to place the turbines, and most wake models still have considerable uncertainty. A variety of methods to optimise turbine placement are used, where local search and genetic algorithms seem to be the most prevalent. While I am currently not planning to do significant research into the optimal methods to determine turbine placement, aspects of this research field are still very relevant as the wake influences the energy output of the site. Additionally the placement of the turbines can affect their failure rate and is therefore important when planning maintenance of the site. Therefore results found in the research of OWF layout will have to be incorporated in accurate models of those sites, and future research can potentially be done in this direction.
+Another logistical decision topic related to the offshore windfarm sites is deciding their layout. This is discussed in various papers, such as \cite{mosetti1994optimization,kusiak2010design,saavedra2011seeding,perez2013offshore,hou2017combined}. There has been a significant amount of research in this direction, though most of this research focuses on windfarm on land, instead of offshore. The lattFer two papers \cite{perez2013offshore,hou2017combined} consider offshore windfarms, as this topic has gained more interest in recent years. While there is a large body of research, there are still many unanswered questions when one wants to determine how to get the most energy production from a site. One important question is the wake model to use, where wake is the decrease in energy output of a turbine based on the position of surrounding turbines. This is clearly a core part of determining where to place the turbines, and most wake models still have considerable uncertainty. A variety of methods to optimise turbine placement are used, where local search and genetic algorithms seem to be the most prevalent. While I am currently not planning to do significant research into the optimal methods to determine turbine placement, aspects of this research field are still very relevant as the wake influences the energy output of the site. Additionally the placement of the turbines can affect their failure rate and is therefore important when planning maintenance of the site. Therefore results found in the research of OWF layout will have to be incorporated in accurate models of those sites, and future research can potentially be done in this direction.
 
 \subsection{More general work on stochastic scheduling} \label{ss:stoch}
 A comprehensive overview of various approaches to scheduling within an uncertain environment is given in \cite{herroelen2005project}. While the survey is relatively old, it provides a valuable categorisation of approaches used to handle uncertainty within scheduling problems. It discusses reactive scheduling, where the baseline schedule is made based on the assumption that all uncertain parameters will take their expected value, and any variation is handled at the moment it occurs. Stochastic project scheduling and fuzzy project scheduling are also discussed, as two different ways to handle uncertainty in project scheduling. Both share a weakness in that they do not produce reliable baseline schedules. For projects on OWFs this weakness is important, as contractors and companies renting out vessels have significant lead times and in-the-moment scheduling is infeasible in this situation. It is therefore crucial to have a baseline schedule which roughly corresponds to how the actual operations will turn out. This is what the last approach discussed in this survey provides; robust scheduling should lead to schedules that do not get disrupted easily. Additionally the concept of sensitivity analysis is discussed, as giving related parties insight into the vulnerable parts of the schedule can often be beneficial. This is one of the goals of the tool discussed in \Cref{s:sim}. 
