--- a/2nd year report/mybib.bib
+++ b/2nd year report/mybib.bib
@@ -470,3 +470,14 @@
   year={2018},
   publisher={Elsevier}
 }
+
+@article{de2012computational,
+  title={A computational study of a stochastic optimization model for long term hydrothermal scheduling},
+  author={de Matos, Vitor Luiz and Finardi, Erlon Cristian},
+  journal={International Journal of Electrical Power \& Energy Systems},
+  volume={43},
+  number={1},
+  pages={1443--1452},
+  year={2012},
+  publisher={Elsevier}
+}
