--- a/2nd year report/Year2report.tex
+++ b/2nd year report/Year2report.tex
@@ -341,7 +341,7 @@ Generally I am glad I got to follow this course, and the format of having a few 
 
 Apart from following courses, I have also helped teach a course. The course, Information Access \& Mining (CS412), was a 4th year Computer Science course focusing on data analysis through machine learning. This is fairly far removed from the topic of my own project, but I was still fairly able to teach the course because of my Computer Science background. The main thing that was new for me was the Python language used in the course, with which I was previously unfamiliar. However, this simply meant that in addition to the teaching experience I got from teaching this course, I also made myself acquainted with Python, which turned out to be a relatively easy language to learn. I lead the labs, which meant I had to answer students questions regarding their exercises. Since I prepared the labs well, answering these questions was fairly straightforward. Additionally I had to mark the exercises, which took the majority of my time spend. But since I was provided with an decently detailed answer key, this was not very difficult either. After the labs stopped (due to the Covid-19 pandemic) my work solely consisted of the marking, lowering the workload. 
 
-This was my first real teaching experience, and I think it went very well. I enjoyed helping the students, and I enjoyed expanding my own knowledge of both the programming language and the subject matter. If I get another chance to help out with a course that interests me during my PhD, I will likely take it. 
+This was my first real teaching experience, and I think it went very well. I enjoyed helping the students, and I enjoyed expanding my own knowledge of both the programming language and the subject matter. If I get another chance to help out with a course that interests me during my PhD, I will likely take it. %TODO: Continue
 
 \pagebreak
 
